AAC-0011-Users-Added docker-compose configuration

--- a/user_service/user_service/Dockerfile
+++ b/user_service/user_service/Dockerfile
@@ -20,6 +20,7 @@ RUN npm install
 COPY --chown=node . .
 
 RUN npm run build
+RUN npm run migrate
 
 # Bind to all network interfaces so that it can be mapped to the host OS
 ENV HOST=0.0.0.0 PORT=3000
